tests/invalid/broken_strings.drs
// Archivo con strings no cerrados

despegar;
nombre = "New York;
activar_camara;
mensaje = "Error en string;
aterrizar;
